--- a/examples/webgl_vpreflector.html
+++ b/examples/webgl_vpreflector.html
@@ -110,7 +110,7 @@
 			// camera.position.set(0.18829417135451876, 0.08142276408283763, -0.10567413852928587);
 			// camera.position.set(0.03563935501962898, 0.22116787374986915, -0.0553714098215656);
 			// camera.position.set(0.09323919966209626, 0.09299305784167794, 0.25949967775832036);
-			camera.position.set(0.11867382037835228, 0.3091829818920357, 0.43643250194722316);
+			camera.position.set(0.14703025254066782, 0.30918298189203564, 0.42221350369381716);
 
 			scene = new THREE.Scene();
 			// scene.background = new THREE.Color(0x443333);
@@ -229,6 +229,7 @@
 
 		function render() {
 			renderer.render(scene, camera)
+			// composer.render()
 		}
 
 		window.renderAPReflector=renderAPReflector
