--- a/examples/webgl_vpreflector.html
+++ b/examples/webgl_vpreflector.html
@@ -19,10 +19,9 @@
 	</div> -->
 	<span style="background:rgba(0,0,0,.7);position: relative; z-index: 1000;padding:5px;padding-left: 0;">
 		<span id="dom_wrap" style="display:none;">
-			<button onclick="setToWindowSize()">set to window size</button>
-			<label for="">width:<input id="dom_width" type="number" value="100" onchange="render_width=this.value" style="width:50px;"></label>
-			<label for="">height:<input id="dom_height" type="number" value="100" onchange="render_height=this.value" style="width:50px;"></label>
-			<button onclick="renderAPReflector();state='rendering';cancelAnimationFrame(raf);">render</button>
+			<span id="dom_width"></span>
+			<span id="dom_height"></span>
+			<button onclick="renderAPReflector()">render</button>
 		</span>
 		<span id="dom_info" style="color:white;">loading...</span>
 	</span>
@@ -41,9 +40,10 @@
 
 		import { DRACOLoader } from './jsm/loaders/DRACOLoader.js';
 
-		window.render_height=100
+		window.render_height=parseInt(getQueryStringByName('height'))
 		window.render_width=Math.round(window.innerWidth*render_height/window.innerHeight)
-		dom_width.value=window.render_width
+		dom_width.innerText='width: '+render_width
+		dom_height.innerText='height: '+render_height
 
 		window.params = {
 			enableSSR: true,
@@ -142,7 +142,7 @@
 
 			{
 				const geometry = new THREE.BoxBufferGeometry(.05, .3, .3);
-				const material = new THREE.MeshStandardMaterial({ color: 'green' })
+				const material = new THREE.MeshStandardMaterial({ color: 'cyan' })
 				const mesh = new THREE.Mesh(geometry, material)
 				mesh.position.set(-.13, plane.position.y + .15, .015)
 				scene.add(mesh)
@@ -150,7 +150,7 @@
 			}
 			{
 				const geometry = new THREE.IcosahedronBufferGeometry(.025, 4);
-				const material = new THREE.MeshStandardMaterial({ color: 'cyan' })
+				const material = new THREE.MeshStandardMaterial({ color: 'green' })
 				const mesh = new THREE.Mesh(geometry, material)
 				mesh.position.set(-.05, plane.position.y + .025, .08)
 				scene.add(mesh)
@@ -238,15 +238,16 @@
 		window.reflectDir=new THREE.Vector3()
 		window.renderAPReflector=renderAPReflector
 		async function renderAPReflector() {
+			cancelAnimationFrame(raf)
 			if(state==='rendering') return
 			if(state==='rendered'){
 				alert('Please reload page to re-render.')
 				return
 			}
 
+			state='rendering'
 			dom_info.innerText='rendering...'
 			await new Promise(resolve=>setTimeout(resolve, 0))
-
 
 			renderer.render(scene, camera)
 			ctx2d.drawImage(renderer.domElement,0,0);
@@ -288,12 +289,12 @@
 			state='rendered'
 		}
 
-		
-		window.setToWindowSize=setToWindowSize
-		function setToWindowSize(){
-			if(!confirm('May cause very long render time! Are you sure?')) return
-			dom_width.value=window.innerWidth
-			dom_height.value=window.innerHeight
+		function getQueryStringByName(name) {
+			var result = location.search.match(new RegExp("[\?\&]" + name + "=([^\&]+)", "i"));
+			if (result == null || result.length < 1) {
+				return "";
+			}
+			return result[1];
 		}
 	</script>
 </body>
