Change to OrthographicCamera no any influence.

--- a/examples/webgl_mirror.html
+++ b/examples/webgl_mirror.html
@@ -25,7 +25,7 @@
 			import * as THREE from '../build/three.module.js';
 
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
-			import { Reflector } from './jsm/objects/Reflector.js';
+			import { Reflector } from './jsm/objects/Reflector_my.js';
 			import Stats from "./jsm/libs/stats.module.js";
 
 			// camera
