--- a/examples/webgl_mirror.html
+++ b/examples/webgl_mirror.html
@@ -192,17 +192,21 @@
 
 				requestAnimationFrame( animate );
 
-				const timer = Date.now() * 0.01;
+				if(!window.pause){
 
-				sphereGroup.rotation.y -= 0.002;
+					const timer = Date.now() * 0.01;
 
-				smallSphere.position.set(
-					Math.cos( timer * 0.1 ) * 30,
-					Math.abs( Math.cos( timer * 0.2 ) ) * 20 + 5,
-					Math.sin( timer * 0.1 ) * 30
-				);
-				smallSphere.rotation.y = ( Math.PI / 2 ) - timer * 0.1;
-				smallSphere.rotation.z = timer * 0.8;
+					sphereGroup.rotation.y -= 0.002;
+
+					smallSphere.position.set(
+						Math.cos( timer * 0.1 ) * 30,
+						Math.abs( Math.cos( timer * 0.2 ) ) * 20 + 5,
+						Math.sin( timer * 0.1 ) * 30
+					);
+					smallSphere.rotation.y = ( Math.PI / 2 ) - timer * 0.1;
+					smallSphere.rotation.z = timer * 0.8;
+
+				}
 
 				renderer.render( scene, camera );
 
