--- a/examples/webgl_mirror.html
+++ b/examples/webgl_mirror.html
@@ -35,6 +35,8 @@
 			window.params={
 				fov: 26.8,
 				posZ: -260, // 260 = 160 + 50 + 50
+				// fov: 12.7,
+				// posZ: -500, // 500 = 400 + 50 + 50
 			}
 
 			let camera, scene, renderer;
