--- a/examples/webgl_mirror.html
+++ b/examples/webgl_mirror.html
@@ -23,6 +23,7 @@
 		<script type="module">
 
 			import * as THREE from '../build/three.module.js';
+			window.THREE=THREE
 
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 			import { Reflector } from './jsm/objects/Reflector_my.js';
@@ -31,6 +32,8 @@
 
 			// camera
 			let aspect = window.innerWidth / window.innerHeight;
+
+			window.tempVec4=new THREE.Vector4()
 
 			window.params={
 				// fov: 26.8,
@@ -59,6 +62,7 @@
 
 				// renderer
 				renderer = new THREE.WebGLRenderer( { antialias: true } );
+				window.renderer=renderer
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				container.appendChild( renderer.domElement );
