--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -193,10 +193,16 @@
 			gui.add(params, 'autoRotate').onChange(() => {
 				controls.enabled = !params.autoRotate
 			})
-			ssrPass.isDistanceAttenuation = false
-			gui.add(ssrPass, 'isDistanceAttenuation');
-			ssrPass.maxDistance = .01
-			gui.add(ssrPass, 'maxDistance').min(0).max(1).step(.01);
+			ssrPass.isDistanceAttenuation = true
+			groundReflector.isDistanceAttenuation=ssrPass.isDistanceAttenuation
+			gui.add(ssrPass, 'isDistanceAttenuation').onChange(()=>{
+				groundReflector.isDistanceAttenuation=ssrPass.isDistanceAttenuation
+			});
+			ssrPass.maxDistance = .1
+			groundReflector.maxDistance = ssrPass.maxDistance
+			gui.add(ssrPass, 'maxDistance').min(0).max(1).step(.01).onChange(()=>{
+				groundReflector.maxDistance=ssrPass.maxDistance
+			});
 			gui.add(params, 'isGroundReflector').onChange(() => {
 				if (params.isGroundReflector) {
 					groundReflector.visible = true
@@ -228,7 +234,10 @@
 
 			});
 			ssrPass.opacity = .8
-			gui.add(ssrPass, 'opacity').min(0).max(1);
+			groundReflector.opacity=ssrPass.opacity
+			gui.add(ssrPass, 'opacity').min(0).max(1).onChange(()=>{
+				groundReflector.opacity=ssrPass.opacity
+			});
 			if (isPerspectiveCamera) {
 				ssrPass.surfDist = 0.0015
 				gui.add(ssrPass, 'surfDist').min(0).max(.005).step(.0001);
