--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -190,12 +190,6 @@
 
 			gui = new GUI({ width: 400 });
 			gui.add(params, 'enableSSR').name('Enable SSR');
-			gui.add(params, 'autoRotate').onChange(() => {
-				controls.enabled = !params.autoRotate
-			})
-			gui.add(ssrPass, 'isDistanceAttenuation');
-			ssrPass.maxDistance = .1
-			gui.add(ssrPass, 'maxDistance').min(0).max(1).step(.01);
 			gui.add(params, 'isGroundReflector').onChange(() => {
 				if (params.isGroundReflector) {
 					groundReflector.visible = true
@@ -205,6 +199,17 @@
 					ssrPass.selects = null
 				}
 			})
+			gui.add(params, 'autoRotate').onChange(() => {
+				controls.enabled = !params.autoRotate
+			})
+			gui.add(ssrPass, 'isDistanceAttenuation').onChange(()=>{
+				groundReflector.isDistanceAttenuation=ssrPass.isDistanceAttenuation
+			});
+			ssrPass.maxDistance = .1
+			groundReflector.maxDistance = ssrPass.maxDistance
+			gui.add(ssrPass, 'maxDistance').min(0).max(.5).step(.001).onChange(()=>{
+				groundReflector.maxDistance=ssrPass.maxDistance
+			});
 			gui.add(params, 'isOtherMeshes').onChange(() => {
 				if (params.isOtherMeshes) {
 					otherMeshes.forEach(mesh => mesh.visible = true)
@@ -227,7 +232,10 @@
 
 			});
 			ssrPass.opacity = .8
-			gui.add(ssrPass, 'opacity').min(0).max(1);
+			groundReflector.opacity=ssrPass.opacity
+			gui.add(ssrPass, 'opacity').min(0).max(1).onChange(()=>{
+				groundReflector.opacity=ssrPass.opacity
+			});
 			if (isPerspectiveCamera) {
 				ssrPass.surfDist = 0.0015
 				gui.add(ssrPass, 'surfDist').min(0).max(.005).step(.0001);
@@ -278,6 +286,8 @@
 
 			if (params.enableSSR) {
 				groundReflector.needsUpdate = true;  // Just SSRPass's beautyRenderTarget (which rendered fisrt internally) need Reflector.
+				///todo: groundReflector has full ground info, need use it to solve reflection gaps problem on objects when camera near ground.
+				///todo: the normal info where groundReflector reflected need to be changed.
 				composer.render();
 			} else {
 				groundReflector.needsUpdate = true;
