--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -33,7 +33,7 @@
 
 		let params = {
 			enableSSR: true,
-			autoRotate: true,
+			autoRotate: false,
 			isOtherMeshes: true,
 			isGroundReflector: true,
 		}
@@ -158,7 +158,7 @@
 			//
 
 			controls = new OrbitControls(camera, renderer.domElement);
-			controls.enableDamping = true
+			// controls.enableDamping = true
 			controls.target.set(0, 0.1, 0);
 			controls.update()
 			controls.enabled = !params.autoRotate
@@ -202,6 +202,8 @@
 			gui.add(params, 'autoRotate').onChange(() => {
 				controls.enabled = !params.autoRotate
 			})
+			ssrPass.isDistanceAttenuation=false
+			groundReflector.isDistanceAttenuation=ssrPass.isDistanceAttenuation
 			gui.add(ssrPass, 'isDistanceAttenuation').onChange(()=>{
 				groundReflector.isDistanceAttenuation=ssrPass.isDistanceAttenuation
 			});
@@ -287,7 +289,7 @@
 			if (params.enableSSR) {
 				groundReflector.needsUpdate = true;  // Just SSRPass's beautyRenderTarget (which rendered fisrt internally) need Reflector.
 				///todo: groundReflector has full ground info, need use it to solve reflection gaps problem on objects when camera near ground.
-				///todo: the normal info where groundReflector reflected need to be changed.
+				///todo: the depth and normal info where groundReflector reflected need to be changed.
 				composer.render();
 			} else {
 				groundReflector.needsUpdate = true;
