only show depthTexture

--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -32,7 +32,7 @@
 		import { DRACOLoader } from './jsm/loaders/DRACOLoader.js';
 
 		let params = {
-			enableSSR: true,
+			enableSSR: false,
 			autoRotate: false,
 			isOtherMeshes: true,
 			isGroundReflector: true,
